--- a/01veriye_ilk_bakis_planets.ipynb
+++ b/01veriye_ilk_bakis_planets.ipynb
@@ -556,9 +556,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
